objects/System_Log_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log Debug Messages Flag</description>
        <inlineHelpText>Checked – Log debug messages in this org</inlineHelpText>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log Error Messages Flag</description>
        <inlineHelpText>Checked – Log errors in this org</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log Info Messages Flag</description>
        <inlineHelpText>Checked – Log info messages in this org</inlineHelpText>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Purge_Days__c</fullName>
        <description>The number of days of logs to keep</description>
        <inlineHelpText>The number of days of logs to keep</inlineHelpText>
        <label>Log Purge (Days)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log warning messages flag</description>
        <inlineHelpText>Checked – Log warning messages in this org</inlineHelpText>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>System Log Setting</label>
</CustomObject>